--- a/custom_components/pvs6/manifest.json
+++ b/custom_components/pvs6/manifest.json
@@ -6,7 +6,7 @@
   "documentation": "https://www.home-assistant.io/integrations/pvs6",
   "iot_class": "local_polling",
   "loggers": ["pypvs"],
-  "requirements": ["pypvs"],
+  "requirements": [],
   "zeroconf": [
     {
       "type": "_pvs6._tcp.local."
